--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -5,7 +5,7 @@
   		<div class="card-body">
     		<h5 class="card-title">Yes/No</h5>
     		<p class="card-text">In this game you must define if the word's tranlation is right or wrong.</p>
-    		<a href="{{ url_for('game_yes_no') }}" class="btn btn-primary">Play now</a>
+    		<a href="{{ url_for('yes_not') }}" class="btn btn-primary">Play now</a>
   		</div>
 </div>
 {% endblock %}
