--- a/app/templates/_words.html
+++ b/app/templates/_words.html
@@ -5,7 +5,7 @@
       <th scope="row">{{ word.id }}</th>
       <td>{{ word.english }}</td>
       <td>{{ word.russian }}</td>
-      <td>No</td>
+      <td>{{ word.remarks }}</td>
     </tr>
   </tbody>
 </table>
