--- a/app/templates/games.html
+++ b/app/templates/games.html
@@ -8,5 +8,13 @@
     		<a href="{{ url_for('yes_not') }}" class="btn btn-primary">Play now</a>
   		</div>
 </div>
+<div class="card" style="width: 18rem;">
+  		<img src="" width="200" height="200"  class="card-img-top" alt="...">
+  		<div class="card-body">
+    		<h5 class="card-title">Associate words</h5>
+    		<p class="card-text">In this game you shoud associate words in keeping with their trasncription</p>
+    		<a href="{{ url_for('associate_game') }}" class="btn btn-primary">Play now</a>
+  		</div>
+</div>
 {% endblock %}
 
