--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -1,37 +1,45 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block scripts %}
-    
-
-    <script type="text/javascript" src=" https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-        function add_word()
-        {
-            $.post('/add_words', {
-                eng: $('#word1').val(),
-                russian: $('#translate1').text(),
-                remarks: $('#validationTextarea').val()
+<script type="text/javascript" src=" https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
 
+
+<script>
+  $(document).ready(initPage);
+  function initPage()
+  {
+    $.post('/initPage').done(function(response){
+      
+     
+  }
+
+    function add_word()
+    {
+        $.post('/add_words', {
+            eng: $('#word1').val(),
+            russian: $('#translate1').text(),
+            remarks: $('#validationTextarea').val()
             })
-        }
-        function translate(sourceElem) {
-            $.post('/translate', {
-                text: $(sourceElem).val()
-            }).done(function(response) {
-                var tr ={};
-                var synonim ="";
-                var synonims = response['text']['def'][0]['tr'][0]['syn'];
-                for (var i =0; i < synonims.length;i++)
-                {
-                    synonim += synonims[i]['text'] + "; ";
-                }
-                $('#synonims').text(synonim);
-                $('#translate1').text(response['text']['def'][0]['tr'][0]['text']);
-
-                
+    }
+    function translate(sourceElem) {
+        $.post('/translate', {
+            text: $(sourceElem).val(),
+            sourcelang: $('#select1').options[$('#select1').selectedIndex].text,
+            destlang: $('#select2').options[$('#select2').selectedIndex].text
+        }).done(function(response) {
+            var tr ={};
+            var synonim ="";
+            var synonims = response['text']['def'][0]['tr'][0]['syn'];
+            for (var i =0; i < synonims.length;i++)
+            {
+                synonim += synonims[i]['text'] + "; ";
+            }
+            $('#synonims').text(synonim);
+            $('#translate1').text(response['text']['def'][0]['tr'][0]['text']);   
             }).fail(function() {
-                
                 $('#translate1').text("Server is not available ");
             });
             
@@ -39,38 +47,37 @@
     </script>
 {% endblock %}
 {% block app_content %}
-    <form class="form-inline">
-  		<label class="sr-only" for="inlineFormInputName2">Nametx</label>
+<div>
+  <form class="form-inline">
+  	<label class="sr-only" for="inlineFormInputName2">Nametx</label>
   		<input type="text" class="form-control mb-2 mr-sm-2" id="word1" placeholder="Write a word here">
-  	     <span id="textid">
-                    <a href="javascript:translate(
+  	    <span id="textid">
+          <a href="javascript:translate(
                                 '#word1',
                                 '#translate1')
                                ">Translate please</a>
-                </span>
-	       </form>
-    <div>
-        <h5>Translation: </h5>
-	   <span id="translate1">
-        
-        </span><br>
-
-        <h5>Synonim: </h5>
-        <span id="synonims">
-            
-        </span><br>
-        <div class="mb-3">
-            <label for="validationTextarea">Remarks</label>
-            <textarea class="form-control is-invalid" rows="2" cols="45"  id="validationTextarea" placeholder="Write a sentence to remember better!" required></textarea>
-            <div class="invalid-feedback">
-
-
-            </div>
-        </div>
-        <h4>Add word</h4>
-        <input type="submit" name="Add word" onclick="add_word()">
-
-
+        </span>         
+	</form>
+  <div>
+  <select class="form-control form-control-lg" id="select1">
+  </select></div>
+  <div>
+  <select class="form-control form-control-lg" id="select2"></select>
+  </div>      
+  <h5>Translation: </h5>
+	  <span id="translate1">
+    </span><br>
+    <h5>Synonim: </h5>
+    <span id="synonims">  
+    </span><br>
+    <div class="mb-3">
+      <label for="validationTextarea">Remarks</label>
+        <textarea class="form-control is-invalid" rows="2" cols="45"  id="validationTextarea" placeholder="Write a sentence to remember better!" required></textarea>
     </div>
+    <div class="invalid-feedback">
+    </div>
+    <h4>Add word</h4>
+    <input type="submit" name="Add word" onclick="add_word()">
+</div>
 
 {% endblock %}
