--- a/app/templates/_words.html
+++ b/app/templates/_words.html
@@ -3,8 +3,8 @@
   <tbody>
     <tr>
       <th scope="row">{{ word.id }}</th>
-      <td>{{ word.english }}</td>
-      <td>{{ word.russian }}</td>
+      <td>{{ word.native_language }}</td>
+      <td>{{ word.foreign_language }}</td>
       <td>{{ word.remarks }}</td>
     </tr>
   </tbody>
