changes new make

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,5 +2,9 @@
 
 {% block app_content %}
 	<h1>Hi, {{ user }}</h1>
+	{% for news in newsapi %}
+		{% include '_articles.html' %} 
+	{% endfor %}
+
 {% endblock %}
 
