--- a/app/templates/yes_not.html
+++ b/app/templates/yes_not.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% import 'bootstrap/wtf.html' as wtf %}
 {% block scripts %}
+{{ super() }}
 	<script type="text/javascript" src=" https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script type="text/javascript">
 	var words;
@@ -83,46 +84,16 @@
 {% endblock %}
 {% block app_content %}
 <div class="container">
-<div class="row justify-content-end">
-    <div class="col-4">
-      <div class="col align-items-center">
-        <div class="card text-center">
-            <div class="card border-success mb-3" style="max-width: 18rem;">
-                <span id="eng"></span> = 
-                <span id="rus"></span><br>
-                <h5 id="idsc">Points: </h5><br>
-                <span id="idps"></span>
-                <button type="button" class="btn btn-success" onclick="getNext(true)">Yes</button>
-                <button type="button" class="btn btn-danger" onclick="getNext(false)">No</button>
-            </div>
+     <div class="card w-75">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Button</a>
+            <a href="#" class="btn btn-primary">Button</a>
+
         </div>
     </div>
-    </div>
-    <div class="col-4">
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Record</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Mark</td>
-                </tr>
-                <tr>
-                    <th scope="row">2</th>
-                    <td>Jacob</td>
-                </tr>
-                <tr>
-                    <th scope="row">3</th>
-                    <td>Larry</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-  </div>
+
 </div>
 
 
