--- a/app/templates/_articles.html
+++ b/app/templates/_articles.html
@@ -2,8 +2,8 @@
   <img src="..." class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">{{ news['title'] }}</h5>
-    <h5>{{ news['content'] }}
     <p class="card-text">{{ news['description']   }}</p>
+    <p> url site</p>
     <p class="card-text"><small class="text-muted">{{ news['publishedAt']  }}</small></p>
   </div>
 </div>
