--- a/app/templates/_words.html
+++ b/app/templates/_words.html
@@ -1,11 +1,12 @@
 
 <table class="table">
   <tbody>
-    <tr>
+    <tr id="{{ word.id }}" class="table-info">
       <th scope="row">{{ word.id }}</th>
       <td>{{ word.native_language }}</td>
       <td>{{ word.foreign_language }}</td>
       <td>{{ word.remarks }}</td>
+      <td><a href="javascript:clear({{ word.id }});">clear</a></td>
     </tr>
   </tbody>
 </table>
